# ultraviolet

./: .env.example  .gitattributes  .gitignore  CODEX_HANDOFF.md  HANDOFF.md  README.md  RESTART.bat  SECURITY.md  START.bat  default.project.json  docker-compose.yml  package-lock.json  package.json  rokit.toml  sourcemap.json  stylua.toml
.github/workflows/: ci.yml  deploy.yml  pages.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/data/: demo_catalog.json
backend/data/static/: fma_clap.npz  fma_index.json
backend/scripts/: build_fma_catalog.py  run_fma_pipeline.ps1  test_search_apis.py
backend/src/: __init__.py  config.py  main.py
backend/src/agents/: __init__.py  conductor.py  dj.py  graph.py  soul.py
backend/src/analysis/: __init__.py  audio_features.py  batch_import.py  demucs_separate.py  demucs_separator.py  emotional_arc.py  identifiers.py  instruments.py  metadata.py  spectral_embedding.py  stem_energy.py  vocal_analysis.py
backend/src/catalog/: __init__.py  fma.py
backend/src/db/: __init__.py  chroma.py  postgres.py
backend/src/identification/: __init__.py  local_fingerprint.py  niche_search.py  streaming_clients.py
backend/src/models/: __init__.py  identifiers.py  recommendation.py  track.py  user.py
backend/src/pipeline/: __init__.py  fma_pipeline.py  fma_status.py
backend/src/recommendation/: __init__.py  bridge.py  catalog.py  catalog_filters.py  catalog_lookup.py  engine.py  genre_buckets.py  manual_tree.py  perceptual_distance.py  scoring.py  session.py  similarity_engine.py  tree_builder.py  tree_depth.py  vectorize.py
backend/src/routes/: __init__.py  analyze.py  batch.py  catalog.py  chat.py  fma.py  health.py  ingest.py  niche_search.py  profile.py  radio.py  search.py  tree.py
backend/src/scoring/: __init__.py  clap_driver.py  engine.py  graph_driver.py  spectral_driver.py  stem_driver.py  ultraviolet_score.py
backend/src/utils/: __init__.py  audio_io.py  embeddings.py  listening.py  ollama_vram.py
backend/tests/: test_analysis.py  test_batch_import.py  test_catalog_filters.py  test_catalog_lookup.py  test_clap_driver.py  test_conductor.py  test_dj.py  test_engine.py  test_identifiers.py  test_local_fingerprint.py  test_multi_driver.py  test_niche_search.py  test_perceptual_distance.py  test_routes.py  test_scoring.py  test_similarity_engine.py  test_soul.py  test_tree_scaling.py
docs/: API.md  ARCHITECTURE.md  DISK_BUDGET.md  IDENTIFIERS.md  SETUP.md  TREE.md  ULTRAVIOLET_DEMUCS_REBUILD.md
frontend/: .dockerignore  .env.production  Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/public/data/: bucket-centroids.json  fma-ids.json  fma-index.json  manifest.json  seed-prototypes.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
scripts/: export_static_catalog.py  install-backend.ps1  publish-github.ps1  run-backend.mjs  run-frontend.mjs  start-backend.ps1  start-frontend.ps1  start-ultraviolet.ps1  upgrade-pytorch-cu128.ps1  verify_static_demo.mjs
(+94 files in other folders)
